<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/spots_Map"
        android:title="@string/map"
        android:icon="@drawable/map_icon"
        app:showAsAction="always" />
    <item
        android:id="@+id/spots_Next"
        android:title="@string/next_spots"
        android:icon="@drawable/next_icon"
        app:showAsAction="always" />
    <item
        android:id="@+id/spots_List"
        android:title="@string/spots_list"
        android:icon="@drawable/list_icon"
        app:showAsAction="always" />
    <item
        android:id="@+id/spots_Favs"
        android:title="@string/fav_spots"
        android:icon="@drawable/fav_icon"
        app:showAsAction="always" />
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/profile_icon"
        app:showAsAction="always" />
</menu>